--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
+    image: flask-app:latest
     ports:
       - "5000:5000"
     environment:
@@ -13,6 +14,7 @@ services:
 
   tests:
     build: .
+    image: flask-app:latest
     environment:
       - PYTHONPATH=/app
     command: ["pytest", "tests"]
