--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Vérifier le code source
         uses: actions/checkout@v2
+        with:
+          lfs: true
 
       - name: Configurer Terraform
         env:
