--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+      - name: Checkout LFS objects
+        run: git lfs checkout
 
       - name: Configurer Terraform
         env:
