--- a/Ansible_scripts/roles/master_setup/tasks/main.yml
+++ b/Ansible_scripts/roles/master_setup/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Installer Kubeadm et Kubectl
+- name: Install Kubeadm and Kubectl
   apt:
     name: 
       - kubeadm=1.31.*
@@ -6,27 +6,27 @@
     state: present
     update_cache: true
 
-- name: S'assurer de l'installation de pip
+- name: Ensure pip is installed
   apt:
     name: python3-pip
     state: present
 
-- name: Installer la librairie python kubernetes
+- name: Install the python Kubernetes library
   pip:
     name: kubernetes
     state: present
 
-- name: Vérifier si le cluster est déja initialisé
+- name: Check if the cluster is already initialized
   command: kubeadm token list
   register: kubeadm_token_list
   ignore_errors: true
 
-- name: Initialiser le cluster
+- name: Initialize the cluster
   command: kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-advertise-address={{ ansible_host }} --ignore-preflight-errors=all
   when: kubeadm_token_list.rc != 0
 
 
-- name: Créer le répertoire .kube
+- name: Create the .kube directory
   become: yes
   become_user: debian
   file:
@@ -34,21 +34,21 @@
     state: directory
     mode: '0755'
 
-- name: Copier admin.conf dans la config kube de l'utilisateur
+- name: Copy admin.conf to user's kube config
   copy:
     src: /etc/kubernetes/admin.conf
     dest: /home/debian/.kube/config
     remote_src: yes
     owner: debian
 
-- name: Vérifier si le réseau des pod est installé
+- name: Check if pod network is installed
   become: yes
   become_user: debian
   command: kubectl get pods -n kube-system -l k8s-app=calico-node
   register: pod_network_check
   ignore_errors: yes
 
-- name: Installer le réseau des Pods
+- name: Install the Pod network
   become: yes
   become_user: debian
   shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml >> pod_network_setup.log
