--- a/Ansible_scripts/roles/master_token/tasks/main.yml
+++ b/Ansible_scripts/roles/master_token/tasks/main.yml
@@ -1,17 +1,17 @@
-- name: Récupération de la commande 'join'
+- name: Retrieve the 'join' command
   shell: kubeadm token create --print-join-command
   register: join_command_raw
 
-- name: Définition de la commande 'join'
+- name: Set the 'join' command
   set_fact:
     join_command: "{{ join_command_raw.stdout_lines[0] }}"
 
-- name: Vérification de l'état des membres du cluster
+- name: Check the status of cluster members
   become: yes
   become_user: debian
   shell: kubectl get nodes --no-headers -o custom-columns=:.metadata.name
   register: cluster_nodes
 
-- name: Définition de la liste des membres du cluster
+- name: Define the list of cluster members
   set_fact:
     cluster_nodes_list: "{{ cluster_nodes.stdout_lines }}"
