--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -4,7 +4,11 @@ on:
   push:
     branches:
       - 'releases/**'
-      - develop
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to deploy (format: vX.X.X)'
+        required: true
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,9 +36,13 @@ jobs:
     - name: Extract version from branch name
       id: extract_version
       run: |
-        VERSION=$(echo ${GITHUB_REF#refs/heads/releases/} | sed 's/\//-/g')
-        echo "VERSION=$VERSION"
-        echo "version=$VERSION" >> $GITHUB_ENV
+          if [[ "${GITHUB_EVENT_NAME}" == "push" ]]; then
+            VERSION=$(echo ${GITHUB_REF#refs/heads/releases/})
+          else
+            VERSION="${{ github.event.inputs.version }}"
+          fi
+          echo "VERSION=$VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -43,7 +51,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push Docker image
-      run: docker push marleg89/flask-app:${{ steps.extract_version.outputs.version }}
+      run: docker push marleg89/flask-app:${{ env.VERSION }}
 
   deploy:
     needs: build
