--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -50,6 +50,10 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+
+    - name: List Docker images for debugging
+      run: docker images
+
     - name: Push Docker image last version
       run: docker push marleg89/flask-app:${{ env.VERSION }}
 
