--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -90,19 +90,13 @@ jobs:
           ansible-playbook site.yml -i inventory.ini 
         working-directory: ./Ansible_scripts
 
-      - name: Extract version from branch name
-        id: extract_version
-        run: |
-          VERSION=$(echo ${GITHUB_REF#refs/heads/releases/} | sed 's/\//-/g')
-          echo "::set-output name=version::$VERSION"
-
       - name: Update Kubernetes manifest with new image tag
         run: |
-          sed -i "s|image: marleg89/flask-app:.*|image: marleg89/flask-app:${{ steps.extract_version.outputs.version }}|" k8s/webapp_deployment.yaml
+          sed -i "s|image: marleg89/flask-app:.*|image: marleg89/flask-app:${{ env.VERSION }}|" k8s/webapp_deployment.yaml
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add k8s/deployment.yaml
-          git commit -m "Update manifest with new image tag ${{ steps.extract_version.outputs.version }}" || echo "No changes to commit"
+          git commit -m "Update manifest with new image tag ${{ env.VERSION }}" || echo "No changes to commit"
 
       - name: Push changes to GitHub
         env:
